Fix spacing and add responsiveness

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,13 @@
     box-sizing: border-box; 
 }
 
+html {
+    font-size: 16px;
+}
+
+body{
+    background-color: black;
+}
 
 .page {
     display: flex;
@@ -11,13 +18,14 @@
     }
 
 .header {
+    width: 100%;
     display: flex;
     justify-content: space-around;
     padding: 1em;
     font-size: 2rem;
     font-family: Designer Block;
     color: white;
-    background: rgba(0, 0, 0, 0.80);
+    background: rgba(118, 117, 117, 0.8);
     font-weight: bold;
 }
 
@@ -34,6 +42,7 @@ a:hover {
 .main-container {
     width: 100%;
     height: 100%;
+    margin-top: 1.5em;
     padding: 1em;
     display: flex;
     flex-direction: column;
@@ -68,8 +77,8 @@ a:hover {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     border-radius: 8px;
     padding: 1em;
     grid-gap: 1em;
@@ -111,10 +120,25 @@ button:hover {
 .footer {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 75px;
+    margin-top: 1.5em;
     padding: 1em;
     color: white;
     background-color: black;
     font-size: 1.5rem;
 }
+
+
+    @media only screen and (max-width: 400px) {
+       .content {
+        max-width: 350px;
+      } 
+
+      .header {
+        font-size: 2vh;
+      }
+   
+    }
+
+ 
+     
